examples/test/testpolicy8292.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8292
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key21: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value31
          key25: value44
          key1: value16
      podSelector:
        matchLabels:
          key1: value8
